[gd_scene load_steps=13 format=3 uid="uid://dcgbnbkh77lxd"]

[ext_resource type="Texture2D" uid="uid://c5rh18mfnmoai" path="res://Tiles.png" id="1_fcmbs"]
[ext_resource type="Script" path="res://Player.gd" id="1_mfwj5"]
[ext_resource type="Texture2D" uid="uid://kwqm11e2ec27" path="res://PointLight2D.png" id="2_sa4fs"]
[ext_resource type="AudioStream" uid="uid://dkh8pjsbg8eeb" path="res://Sounds/Jump.wav" id="4_7tqit"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nl3op"]
size = Vector2(12, 11)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gtr3m"]
polygon = PackedVector2Array(-6, -3, 6, -3, 6, 8, -6, 8)

[sub_resource type="Animation" id="Animation_owkji"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [300]
}

[sub_resource type="Animation" id="Animation_6qv76"]
resource_name = "Jump"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [304]
}

[sub_resource type="Animation" id="Animation_b7jhg"]
resource_name = "Ladder"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [285, 286]
}

[sub_resource type="Animation" id="Animation_u62t8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [300]
}

[sub_resource type="Animation" id="Animation_775du"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [301, 303]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usok2"]
_data = {
"Idle": SubResource("Animation_owkji"),
"Jump": SubResource("Animation_6qv76"),
"Ladder": SubResource("Animation_b7jhg"),
"RESET": SubResource("Animation_u62t8"),
"Run": SubResource("Animation_775du")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_mfwj5")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_nl3op")

[node name="PlayerOccluder" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_gtr3m")

[node name="PlayerSprite" type="Sprite2D" parent="."]
visibility_layer = 3
texture = ExtResource("1_fcmbs")
hframes = 20
vframes = 20
frame = 300

[node name="LightSource" type="PointLight2D" parent="."]
scale = Vector2(0.25, 0.25)
energy = 16.0
shadow_enabled = true
texture = ExtResource("2_sa4fs")

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usok2")
}

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7tqit")
volume_db = -6.0
